=========
Changelog
=========

1.1.0a8 (unreleased)
====================

- Nothing changed yet.


1.1.0a7 (2015-09-18)
====================

- Support Git < 2.0

- Add support for managing Python 3.5 environments.

- Update virtualenv to newest version for Python 2.7+ and all
  Python 3 versions.

- Drop support for Python 3.1.

- Update supervisor: 3.0 -> 3.1.3

  Includes updated dependencies.

- Make socketpath in supervisor configurable.

- Fix broken Python compatibility tests.


1.1.0a6 (2015-09-17)
====================

- Adjust Git repositories to correctly perform fast-forward
  merges.

- Fix Mercurial repository tests that broke without noticing.

- Add end-to-end test for our new error reporting which got a
  regression (#17617)

1.1.0a5 (2015-09-09)
====================

- Fix Mercurial repositories after refactorings for Git broke it.


1.1.0a4 (2015-09-06)
====================

- Actually get pull-based Git repositories to work. Still experimental, though.


1.1.0a3 (2015-09-05)
====================

- Initial support for managing batou projects with git. Git repositories
  support pull-based and bundle-based shipping.

- Add backwards compatibility for `batou remote` to help users
  migrate their fingers.

1.1.0a2 (2015-09-03)
====================

- Fix updating from Batou 1.0


1.1.0a1 (2015-09-03)
====================

- Do request an update for packages installed from requirements.txt within
  the batou environment to help update VCS checkouts that are pinned.

- Clear PYTHONPATH for bootstrapping to avoid accidental interaction with
  unclean Python environments.

- Provide '--fast' mode: do not perform bootstrapping.

  This is a first step to improve bootstrapping times. The switch is rather dumb but allows us to work a) offline
  in some cases and b) develop faster.

- Fix unicode encoding/decoding in File handling. See #14944.
  (Ported from 1.0)

- Fold the runner invocation for `local` and `remote` into
  a single `deploy` command:
