@@ -166,7 +166,7 @@ class VirtualEnvPy2_7(VirtualEnvPyBase):
     venv_version = '13.1.2'
     venv_checksum = 'md5:b989598f068d64b32dead530eb25589a'
 
-    install_options = ('--ignore-installed', '--egg')
+    install_options = ('--egg', )
 
 
 class VirtualEnvPy3_2(VirtualEnvPyBase):
@@ -174,7 +174,7 @@ class VirtualEnvPy3_2(VirtualEnvPyBase):
     venv_version = '13.1.2'
     venv_checksum = 'md5:b989598f068d64b32dead530eb25589a'
 
-    install_options = ('--ignore-installed', '--egg')
+    install_options = ('--egg', )
 
 
 class VirtualEnvPy3_3(VirtualEnvPyBase):
@@ -182,7 +182,7 @@ class VirtualEnvPy3_3(VirtualEnvPyBase):
     venv_version = '13.1.2'
     venv_checksum = 'md5:b989598f068d64b32dead530eb25589a'
 
-    install_options = ('--ignore-installed', '--egg')
+    install_options = ('--egg', )
 
 
 class VirtualEnvPy3_4(VirtualEnvPyBase):
@@ -190,7 +190,7 @@ class VirtualEnvPy3_4(VirtualEnvPyBase):
     venv_version = '13.1.2'
     venv_checksum = 'md5:b989598f068d64b32dead530eb25589a'
 
-    install_options = ('--ignore-installed', '--egg')
+    install_options = ('--egg', )
 
 
 class VirtualEnvPy3_5(VirtualEnvPyBase):
@@ -198,7 +198,7 @@ class VirtualEnvPy3_5(VirtualEnvPyBase):
     venv_version = '13.1.2'
     venv_checksum = 'md5:b989598f068d64b32dead530eb25589a'
 
-    install_options = ('--ignore-installed', '--egg')
+    install_options = ('--egg', )
 
 
 class VirtualEnvDownload(Component):
